WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169987
NeverDestroyed<MediaQueryEvaluator> must explicitly construct with a String
https://bugs.webkit.org/show_bug.cgi?id=169987
Summary
NeverDestroyed<MediaQueryEvaluator> must explicitly construct with a String
Dean Jackson
Reported
2017-03-22 18:52:24 PDT
CSSDefaultStyleSheets creates a static MediaQueryEvaluator, but thanks to the template magic of NeverDestroyed, it was converting the char* argument into a bool, and calling the wrong constructor.
Attachments
Patch
(2.20 KB, patch)
2017-03-22 18:57 PDT
,
Dean Jackson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2017-03-22 18:53:04 PDT
<
rdar://problem/31211087
>
Dean Jackson
Comment 2
2017-03-22 18:57:04 PDT
Created
attachment 305152
[details]
Patch
Dean Jackson
Comment 3
2017-03-23 11:19:12 PDT
Committed
r214305
: <
http://trac.webkit.org/changeset/214305
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug