NeverDestroyed<MediaQueryEvaluator> must explicitly construct with a String https://bugs.webkit.org/show_bug.cgi?id=169987 <rdar://problem/31211087>

Reviewed by Alex Christensen.

CSSDefaultStyleSheets creates a static MediaQueryEvaluator, but thanks
to the template magic of NeverDestroyed, it was converting the char*
argument into a bool, and calling the wrong constructor.

Unfortunately this is difficult to test because it only affects
the default UA style sheets, and they currently don't have
and @media rules (which would always evaluate to true given
the bug). I don't want to put in a useless rule just to check
if the bug is fixed. When one is added for bug 168447, this change
will be exercised.

* css/CSSDefaultStyleSheets.cpp: Explicitly construct with a String
rather than a char*.
(WebCore::screenEval):
(WebCore::printEval):

Canonical link: https://commits.webkit.org/186931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214305 268f45cc-cd09-0410-ab3c-d52691b4dbfc